--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
@@ -37,7 +37,21 @@ imagePullPolicy: IfNotPresent
 #   - name: "image-pull-secret"
 
 ## Timeout, in seconds, for liveness and readiness probes of a runner pod.
-# probeTimeoutSeconds: 3
+# probeTimeoutSeconds: 4
+
+## Configure the livenessProbe
+livenessProbe: {}
+#   initialDelaySeconds: 60
+#   periodSeconds: 10
+#   successThreshold: 1
+#   failureThreshold: 3
+
+## Configure the readinessProbe
+readinessProbe: {}
+#   initialDelaySeconds: 60
+#   periodSeconds: 10
+#   successThreshold: 1
+#   failureThreshold: 3
 
 ## How many runner pods to launch.
 ##
@@ -143,9 +157,16 @@ sessionServer:
   # timeout: 1800
   # internalPort: 8093
   # externalPort: 9000
+
+  #In case sessionServer.serviceType is NodePort. If not defined, auto NodePort will be assigned.
+  # nodePort: 30093
+
   # publicIP: ""
   # loadBalancerSourceRanges:
   #   - 1.2.3.4/32
+
+  #Valid values: ClusterIP, Headless, NodePort, LoadBalancer
+  serviceType: LoadBalancer
 
 ## For RBAC support:
 rbac:
@@ -622,12 +643,12 @@ deploymentLabels: {}
   # owner.team: <my_cool_team>
 
 ## Lifecycle options to be added to deployment
-##  
+##
 deploymentLifecycle: {}
   # Example
   # preStop:
   #   exec:
-  #     command: ["/bin/sh", "-c", "echo 'shutting down'"] 
+  #     command: ["/bin/sh", "-c", "echo 'shutting down'"]
 
 ## Set hostname for runner pods
 #hostname: my-gitlab-runner
