--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/deployment.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/deployment.yaml
@@ -79,20 +79,20 @@ spec:
         {{- include "gitlab-runner.runner-env-vars" . | indent 8 }}
         livenessProbe:
           exec:
-            command: ["/bin/bash", "/configmaps/check-live"]
-          initialDelaySeconds: 60
-          timeoutSeconds: {{ default 3 .Values.probeTimeoutSeconds }}
-          periodSeconds: 10
-          successThreshold: 1
-          failureThreshold: 3
+            command: ["/bin/bash", "/configmaps/check-live", "{{ default 4 .Values.probeTimeoutSeconds | add -1 | max 1 }}"]
+          initialDelaySeconds: {{ default 60 .Values.livenessProbe.initialDelaySeconds }}
+          timeoutSeconds: {{ default 4 .Values.probeTimeoutSeconds }}
+          periodSeconds: {{ default 10 .Values.livenessProbe.periodSeconds }}
+          successThreshold: {{ default 1 .Values.livenessProbe.successThreshold }}
+          failureThreshold: {{ default 3 .Values.livenessProbe.failureThreshold }}
         readinessProbe:
           exec:
             command: ["/usr/bin/pgrep","gitlab.*runner"]
-          initialDelaySeconds: 10
-          timeoutSeconds: {{ default 3 .Values.probeTimeoutSeconds }}
-          periodSeconds: 10
-          successThreshold: 1
-          failureThreshold: 3
+          initialDelaySeconds: {{ default 60 .Values.readinessProbe.initialDelaySeconds }}
+          timeoutSeconds: {{ default 4 .Values.probeTimeoutSeconds }}
+          periodSeconds: {{ default 10 .Values.readinessProbe.periodSeconds }}
+          successThreshold: {{ default 1 .Values.readinessProbe.successThreshold }}
+          failureThreshold: {{ default 3 .Values.readinessProbe.failureThreshold }}
         ports:
         - name: {{ .Values.metrics.portName | quote }}
           containerPort: {{ .Values.metrics.port }}
