--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/service-session-server.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/service-session-server.yaml
@@ -17,7 +17,8 @@ spec:
   selector:
     app: {{ include "gitlab-runner.fullname" . }}
     release: "{{ .Release.Name }}"
-  type: LoadBalancer
+  type: {{ (eq (include "gitlab-runner.server-session-service-type" .) "Headless") | ternary "ClusterIP" (include "gitlab-runner.server-session-service-type" .) }}
+  {{- if eq (include "gitlab-runner.server-session-service-type" .) "LoadBalancer"}}
   {{- if .Values.sessionServer.publicIP }}
   loadBalancerIP: {{ .Values.sessionServer.publicIP }}
   {{- end }}
@@ -25,8 +26,15 @@ spec:
   loadBalancerSourceRanges:
     {{- toYaml .Values.sessionServer.loadBalancerSourceRanges | nindent 4 }}
   {{- end }}
+  {{- end }}
+  {{- if eq (include "gitlab-runner.server-session-service-type" .) "Headless" }}
+  clusterIP: None
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ include "gitlab-runner.server-session-external-port" . }}
     targetPort: {{ include "gitlab-runner.server-session-internal-port" . }}
+    {{- if .Values.sessionServer.nodePort }}
+    nodePort: {{ .Values.sessionServer.nodePort }}
+    {{- end }}
 {{- end }}
