--- a/argocd-helm-charts/sonarqube/charts/sonarqube/Chart.yaml
+++ b/argocd-helm-charts/sonarqube/charts/sonarqube/Chart.yaml
@@ -1,45 +1,13 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Upgrade SonarQube Server to 10.8.0"
+      description: "Update Chart's version 10.8.1"
     - kind: changed
-      description: "Release SonarQube Community Build 24.12"
+      description: "Upgrade SonarQube Server to 10.8.1"
     - kind: changed
-      description: "Update Chart's version to 10.8.0"
-    - kind: added
-      description: "Support the installation of the Oracle JDBC Driver"
+      description: "Remove immutable labels selector 'app.kubernetes.io/name' and 'app.kubernetes.io/version' as it breaks upgrades"
     - kind: changed
-      description: "Support Kubernetes v1.31"
-    - kind: deprecated
-      description: "Deprecate the 'community' value for the 'edition' parameter"
-    - kind: deprecated
-      description: "Deprecate the default value of 'image.tag' in favor of an empty string"
-    - kind: added
-      description: "Introduce the 'community.enabled' and 'community.buildNumber' parameters for SonarQube Community Build"
-    - kind: changed
-      description: "Update the Chart's icon with the SonarQube Server logo"
-    - kind: fixed
-      description: "Set 'app.kubernetes.io/name' and 'app.kubernetes.io/version' as selector labels"
-    - kind: added
-      description: "Support Gateway on different namespace in HTTPRoute"
-    - kind: changed
-      description: "Change 'ingress.ingressClassName' default, set it to 'nginx' if 'nginx.enabled' or 'ingress-nginx.enabled'"
-    - kind: changed
-      description: "Ensure that ConfigMap resources are not created for 'initFS' and 'initSysctl' if not needed"
-    - kind: changed
-      description: "Ensure the Pod will stop at 'init' stage if init_sysctl.sh failed to modify kernel parameters"
-    - kind: changed
-      description: "Replace the example images in initContainers, initSysctl and initFs from 'busybox:1.36' to 'ubuntu:24.04', which are commented out by default"
-    - kind: fixed
-      description: "Make the 'automountServiceAccountToken' configurable with 'serviceAccount.automountToken' in PodSpec"
-    - kind: deprecated
-      description: "Deprecate 'sonarqubeFolder', 'jdbcOverwrite.jdbcPassword' and 'terminationGracePeriodSeconds'"
-    - kind: deprecated
-      description: "Deprecate 'deploymentStrategy.type', which will be set to 'Recreate'"
-    - kind: deprecated
-      description: "Deprecate 'account', 'curlContainerImage', 'adminJobAnnotation'"
-    - kind: deprecated
-      description: "Deprecate the StatefulSet deployment type"
+      description: "Set 'image.tag' empty in default value file, 'image.tag' is dynamically set according to the 'edition' and 'community' fields, with user-defined value taking precedence."
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: sonarqube
@@ -51,7 +19,7 @@ annotations:
       url: https://github.com/SonarSource/helm-chart-sonarqube/tree/master/charts/sonarqube
   charts.openshift.io/name: sonarqube
 apiVersion: v2
-appVersion: 10.8.0
+appVersion: 10.8.1
 dependencies:
 - condition: postgresql.enabled
   name: postgresql
@@ -88,4 +56,4 @@ sources:
 - https://github.com/SonarSource/docker-sonarqube
 - https://github.com/SonarSource/sonarqube
 type: application
-version: 10.8.0
+version: 10.8.1
